# python_template

./: .gitignore  LICENSE  README.md  Taskfile.yml  entrypoint.sh  lefthook.yml  pyproject.toml
