[project]
authors = [{name = "Shigurex", email = "yamatohokari@gmail.com"}]
dependencies = []
name = "python_template"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
python_template = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.1,<3.14"
ruff = ">=0.9.6,<0.10"
